# predict-train

./: .env.example  .gitignore  MEMORY.md  ext.sh  fix_empty_completions.py  generate_plots_from_cache.py  hf_pull.sh  hf_push.sh  pyproject.toml  run.py  run_cell99.py  run_new_analyses.py
Euodia/: .env.template  pyproject.toml  pyrightconfig.json  ruff.toml  skypilot_devbox.yaml
artefacts/: .gitattributes  PIPELINE.md  README.md
mo/: 01_em_predict.py  02_tda_difference.py  03_tda_steering.py  04_misalignment_probe.py  06_predict_generalization.py  07_system_prompt_reminder.py  08_train_em_model_organism.py  09_tda_lora_directions.py  10_tda_combined_directions.py  11_em_sdf.py  12_predict_train.py  13_sae_steering_analysis.py  14_misalignment_projection.py  15_bucket_projection.py  16_bucket_train.py  17_bucket_eval.py  18_patchscope_steering.py  19_phantom_tr.py  20_tinker_finetune.py  21_eval_checkpoints.py  22_dataset_layer_sweep.py  22_dataset_layer_sweep.yaml  22_testbed_probes.yaml  23_training.py  23_training.yaml  23_training_fireworks.py  23_training_fireworks.yaml  24_test_modal.py  24_training_modal.py  24_training_modal.yaml  25_icl.py  25_icl_config.yaml  25_icl_modal.py  25_testbeds.yaml  26_patchscopes.py  27_tulu_steering.py  28_data_attribution.py  29_lmsys_kl_oracle.py  30_tulu_values.py  31_lmsys_generation_comparison.py  (+4 more)
notebooks/: sv_comparison.ipynb
pipeline/: __init__.py  config.py  helpers.py  runner.py
stages/: eval_finetuned.py  eval_steering.py  filter_dataset.py  finetune.py  layer_sweep.py  layer_sweep_t5.py  score_llm_judge.py  (+2 more)
(+904 files in other folders)
